--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/cors": "^2.8.14",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^7.5.1"
+    "mongoose": "^7.5.1",
+    "textflow.js": "^0.1.4"
   }
 }
