--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.5.1",
-    "textflow.js": "^0.1.4"
+    "textflow.js": "^0.1.4",
+    "ws": "^8.14.2"
   }
 }
