--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,12 @@
     "@hookform/resolvers": "^3.3.1",
     "axios": "^1.5.0",
     "react": "^18.2.0",
+    "react-contenteditable": "^3.3.7",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-input-mask": "latest",
     "react-router-dom": "^6.15.0",
+    "uuid": "^9.0.1",
     "yup": "^1.2.0"
   },
   "devDependencies": {
