--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/express-ws": "^3.0.2",
     "bun-types": "latest",
     "dotenv": "^16.3.1"
   },
@@ -17,6 +18,7 @@
     "@types/cors": "^2.8.14",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-ws": "^5.0.2",
     "mongoose": "^7.5.1",
     "textflow.js": "^0.1.4",
     "ws": "^8.14.2"
